--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<p>TESTE</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>@cchiele</title>
+    </head>
+    <body>
+        <div style="text-align: center;">
+            <h1 style="text-align: center;">Bem vindo(a)! Minha página está em construção.</h1>
+            <p>Olá, meu nome é Cris.</p>
+            <p>@cchiele</p>
+        </div>
+    </body>
+</html> 
