--- a/index.html
+++ b/index.html
@@ -1,52 +1,135 @@
-<!DOCTYPE html>
-<html lang="en"><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<meta charset="utf-8">
-<title>Mobile</title>
-<link href="styles.css" media="all" rel="stylesheet" type="text/css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html lang="pt-br" xml:lang="pt-br" xmlns="http://www.w3.org/1999/xhtml">
+
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
+	<meta name="description" content="Tramontina Mobile">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<script>
+		window.onload = function()
+		{
+			if (navigator.userAgent.match(/(iPad|iPhone|iPod)/i)) 
+			{
+				document.getElementById("botao-ios").classList.add("exibe");
+			} else if (navigator.userAgent.match(/android/i))  {
+				document.getElementById("botao-android").classList.add("exibe");
+			} else
+			{
+				document.getElementById("botao-android").classList.add("exibe");
+				document.getElementById("botao-ios").classList.add("exibe");
+				document.getElementById("mensagem-mobile").classList.add("exibe");
+			}
+		}
+	</script>
+
+	<style type="text/css">
+
+		body {
+			font-family: Trebuchet MS,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Tahoma,sans-serif; 
+		}
+		
+		#container {
+			justify-content: center;
+			align-items: center;
+			display: flex;
+  			flex-direction: column;
+		}
+
+		#im_logo {
+			margin-top: 20px;
+			max-width:130px;
+		}
+
+		h1 {
+			margin-top: 30px;
+			text-align: center;
+			font-size: 20px;
+		}
+
+		h2 {
+			margin-top: 10px;
+			text-align: center;
+			font-size: 14px;
+			font-weight: normal;
+			color: #7A7A7A;
+		}
+
+		.exibe {
+			display: block !important;
+		}
+
+		.oculta {
+			display: none;
+		}
+
+		.botao-download {
+			background-color: #007CCD;
+			width: 180px;
+			height: 60px;
+			text-align: center;
+			border-radius: 10px;
+			margin-top: 30px;
+			float:left;
+			margin: 20px;
+		}
+
+		.botao-download img {
+			width: 40px;
+			float:left;
+			margin:10px 0 0 15px;
+		}
+
+		.botao-download span {
+			color: #FFF;
+			font-weight: bold;
+			float: left;
+			margin: 19px 0 0 15px;
+			font-size: 20px;
+		}
+
+		#mensagem-mobile {
+			margin-top: 10px;
+			color: #007CCD;
+			font-weight: bold;
+			text-align: center;
+		}
+			
+	</style>
+
+
 </head>
+
 <body>
+	<div id="container">
+		<div>
+			<img id="im_logo" src="img/tramontina_mobile.png" alt="Tramontina Mobile"/>
+		</div>
 
-<div class="navbar navbar-fixed-top iconized">
-<div class="navbar-inner"></div>
-</div>
 
-<div class="full-height-wrapper">
-<div class="container-fluid full-height full-width">
-<div class="row-dialog">
-<div class="centered-vertical">
-<div class="centered-horizontal wide">
+		<h1>Acesse os aplicativos da Tramontina<br/>em seu smartphone.</h1>
+		
+		<h2>Aplicativo exclusivo para funcionários da Tramontina.<br/>A liberação do acesso é feita pelo operador de cada unidade.</h2>
 
-<div class="clear"></div>
+		<div id="mensagem-mobile" class="oculta">
+			Aplicativo disponível para Android, iPhone e iPad.<br/>Selecione o download correspondente ao seu sistema.
+		</div>
 
-<div class="well">
-<div class="app-header">
-<div class="small_icon"><img alt="Icon" class="app_icon " src="app_logo_ios_60.png" title="Mobile"></div>
-<div class="meta">
-<h2>Mobile</h2>
-<ul>
-<li><em>for</em> iOS 6.1 or later</li>
-<li><em>by</em> iPhone Distribution: Tramontina Central de Administracao Ltda.</li>
-</ul>
-</div>
-</div>
-<div class="clear"></div>
-<div class="app-body">
+		<div>
+			<a id="botao-android" class="oculta botao-download" href="https://www.tramontina.net/mobile/dim000_android.apk">
+				<img src="img/ico_android.svg"/>
+				<span>Download</span>
+			</a>
+	
+			<a id="botao-ios" class="oculta  botao-download" href="itms-services://?action=download-manifest&amp;url=https%3a%2f%2fcchiele.github.io%2fdim000_ios.plist">
+				<img src="img/ico_ios.svg"/>
+				<span>Download</span>
+			</a>
+		</div>
 
-<div class="btn-group pull-right">
-<a class="btn btn-primary button" href="itms-services://?action=download-manifest&url=https%3a%2f%2fcchiele.github.io%2fdim000_ios.plist">Install App</a>
-</div>
+	</div>
+                               
+	
+</body>
 
-<h3>Version 1.09</h3>
-<h4>10/22/2020 09:08:25</span></h4>
-<h4>5.90 MB</h4>
-
-<div class="pull-right">
-Download <a href="dim000_ios.ipa">iOS package</a>
-</div>
-</div>
-</div>
-</div>
-</div>
-
-</body></html>
+</html>
