--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <body>
 	<div id="container">
 		<div>
-			<img id="im_logo" src="img/tramontina_mobile.png" alt="Tramontina Mobile"/>
+			<img id="im_logo" src="tramontina_mobile.png" alt="Tramontina Mobile"/>
 		</div>
 
 
@@ -117,12 +117,12 @@
 
 		<div>
 			<a id="botao-android" class="oculta botao-download" href="https://www.tramontina.net/mobile/dim000_android.apk">
-				<img src="img/ico_android.svg"/>
+				<img src="ico_android.svg"/>
 				<span>Download</span>
 			</a>
 	
 			<a id="botao-ios" class="oculta  botao-download" href="itms-services://?action=download-manifest&amp;url=https%3a%2f%2fcchiele.github.io%2fdim000_ios.plist">
-				<img src="img/ico_ios.svg"/>
+				<img src="ico_ios.svg"/>
 				<span>Download</span>
 			</a>
 		</div>
