--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <body>
 	<div id="container">
 		<div>
-			<img id="im_logo" src="tramontina_mobile.png" alt="Tramontina Mobile"/>
+			<img id="im_logo" src="img/tramontina_mobile.png" alt="Tramontina Mobile"/>
 		</div>
 
 
